# Hackathon-II-The-Evolution-of-Todo-Mastering-Spec-Driven-Development-Cloud-Native-AI-by-SH

./: .gitignore  README.md
phase1/: AGENTS_README.md  AGENT_SYSTEM_SUMMARY.md  CLAUDE.md  PHASE_D_VALIDATION.md  README.md  pyproject.toml  validate_e2e.py
phase1/docs-history/adr/: 001-immutable-task-model.md  002-in-memory-storage-only.md  003-return-value-error-handling.md  005-argparse-cli.md
phase1/docs-history/prompts/: 0001-specify-phase-i-in-memory-cli.spec.prompt.md  0002-plan-phase-i-architecture.plan.prompt.md  0003-generate-tdd-task-breakdown.tasks.prompt.md  004-agent-system-implementation.phr.md
phase1/docs/adr/: 004-layered-architecture.md
phase1/docs/prompts/: 001-phase-b-c-implementation.green.prompt.md
phase1/specs/: 004-agent-system-subagents-skills.phr.md  plan.md  spec.md  tasks.md
phase1/specs/checklists/: requirements.md
phase1/src/: __main__.py  interactive.py  interactive_advanced.py  interactive_agent_enhanced.py  interactive_agent_modern.py  main.py  main_with_agents.py
phase1/src/agents/: __init__.py  agent_factory.py  agent_orchestrator.py  agent_registry.py  analytics_agent.py  base_agent.py  task_management_agent.py
phase1/src/cli/: __init__.py  commands.py
phase1/src/models/: __init__.py  task.py
phase1/src/services/: __init__.py  task_manager.py
phase1/src/skills/: __init__.py  analytics_skills.py  base_skill.py  task_skills.py
phase1/tests/: test_acceptance.py  test_agents.py  test_cli_commands.py  test_task_manager.py  test_task_model.py
phase2/: CLAUDE.md  IMPLEMENTATION_SUMMARY.md  LOCAL_SETUP_COMPLETE.md  (+8 more)
(+131 files in other folders)
