[project]
name = "todo-app"
version = "1.0.0"
description = "Phase I - In-Memory Python Todo CLI application"
requires-python = ">=3.13"
dependencies = []

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
]

[project.scripts]
todo = "src.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
